# MagicDec

./: .gitignore  .gitmodules  convert_hf_checkpoint.py  data.csv  figure.py  find_alpha.py  requirements.txt  run_longbench.sh  test.py  text.txt
Data/: data_converter.py  longbench_converter.py  preprocess_lbv2.py  preprocess_longbench.py  prompt.py
Engine/SqueezedAttention/: .gitignore  README.md  backend.py  llama_flash_attn_monkey_patch.py  offline_clustering.py  pyproject.toml  run_offline_clustering.sh  test.py
Engine/SqueezedAttention/LongBench/: eval.py  pred.py  run_different_prefix_offline.sh
Engine/SqueezedAttention/LongBench/config/: dataset2maxlen.json  dataset2prompt.json  model2maxlen.json  model2path.json
Engine/SqueezedAttention/squeezedattention/: clustering.py  kernels.py  utils.py
Engine/SqueezedAttention/squeezedattention.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Engine/SqueezedAttention/transformers/src/transformers/: cache_utils.py
Engine/SqueezedAttention/transformers/src/transformers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Engine/SqueezedAttention/transformers/src/transformers/models/llama/: __init__.py  configuration_llama.py  modeling_llama.py
Engine/SqueezedAttention/transformers/src/transformers/models/phi/: modeling_phi.py
Engine/SqueezedAttention/transformers/tests/models/llama/: test_modeling_llama.py
output/: Meta-Llama-3.1-8B_longbenchv2_acceptance_rates.csv  Mistral-7B-v0.1_pg19_acceptance_rates.csv  llama-3.1-8B_PG19_acceptance_rates.csv
run_files/: run.sh  run_2.sh  run_3step.sh  run_longbenchv1.sh  (+8 more)
(+23 files in other folders)
