[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "squeezedattention"
version = "0.1.0"
description = "Squeezed Attention: Accelerating Long Context Length LLM Inference"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch",
    "transformers",
    "datasets",
]

[tool.setuptools.packages.find]
